--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
   overflow-x: hidden;
 }
 .navbar-brand{
-  font-size: 1.2rem;
+  font-size: .8rem;
     font-weight: bold;
     color: #172A58;
 }
@@ -22,13 +22,13 @@ body {
   font-weight: bold !important; 
 }
 .nav-link{
-  font-size: 1.0rem;
+  font-size: .8rem;
   font-weight: 500;
   color: #172A58;
 }
 .first_container {
-  padding-left: 150px;
-  padding-right: 150px;
+  padding-left: 100px;
+  padding-right: 100px;
   background-image: url("./assets/Fugu-Banner-removebg-preview.png");
   align-items: center;
   /* justify-content: space-between; */
@@ -39,27 +39,28 @@ body {
 }
 
 .socials_container {
-  padding: 50px 0px 0px 230px;
+  padding: 20px 0px 0px 200px;
   position: relative;
+  margin-top: 30px;
 
 }
 
 .indi_socials_container {
   display: flex;
   flex-direction: row;
-  margin-right: 185px !important;
+  margin-right: 135px !important;
   align-items: center;
 }
 .main_footer_container{
-  padding: 50px  150px;
+  padding: 20px  150px;
   
 }
 
 .news_letter_header{
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 .quicklink_header{
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 /* form  */
@@ -68,21 +69,21 @@ body {
 }
 /* inputs  */
 #inputPassword2{
-  padding: 1.2rem 1.2rem;
+  padding: .8rem .8rem;
   font-size: .8rem;
 }
 /* button  */
 .subscribe_btn{
 position: absolute;
-top: 7px;
+top: 4px;
 right: 10px;
 
 }
 
 /* Links  */
 .continue_browsing{
-  margin-left: 170px;
-  margin-bottom: 20px;
+  margin-right: 350px;
+  margin-bottom: 0px;
 }
 
 /* typography */
@@ -98,7 +99,7 @@ right: 10px;
   line-height: 0.2rem;
 }
 .socials_h6{
-  font-size: 1rem;
+  font-size: .8rem;
   font-weight: bold;
 }
 .last {
@@ -108,30 +109,30 @@ right: 10px;
 
 .socials_container h5 {
   color: var(--blue);
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: 600;
-  margin-left: 70px;
+  margin-left: 50px;
 }
 
 .banner_head_test {
-  font-size: .7rem;
+  font-size: .6rem;
   font-weight: 500;
 }
 
 .banner_body_test {
-  font-size: 1rem;
-  line-height: 1.5rem;
+  font-size: .8rem;
+  line-height: 1.3rem;
   /* max-width: 550px; */
 }
 .news_letter_header{
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: bolder;
   text-transform: capitalize;
   color: #353F66;
 }
 .quicklink_header{
   color: #353F66;
-  font-size: 1.1rem;
+  font-size: .9rem;
     font-weight: bold;
     text-transform: capitalize;
 }
@@ -142,14 +143,14 @@ right: 10px;
 list-style-type: none;
 margin-bottom: 10px;
 color: grey;
-font-size: 1.1rem;
+font-size: .9rem;
 font-weight: 500;
 }
 
 /* IMAGES */
 .banner_img {
-  height: 350px;
-  width: 350px;
+  height: 250px;
+  width: 250px;
 }
 .mobile{
   position: absolute;
@@ -159,8 +160,12 @@ font-weight: 500;
 }
 
 .socials_img {
-  height: 300px;
-  width: 300px;
+  height: 200px;
+  width: 200px;
+}
+.cont_browsing_img{
+  height: 80px;
+
 }
 
 /* media queries */
