--- a/src/index.css
+++ b/src/index.css
@@ -85,7 +85,7 @@ body {
 .indi_socials_container {
   display: flex;
   flex-direction: row;
-  margin-right: 30px !important;
+  margin-right: -1px !important;
   align-items: center;
   margin-bottom: 20px;
 }
@@ -141,8 +141,8 @@ body {
 
 .socials_paragraph {
   text-transform: capitalize;
-  font-size: .6rem;
-  font-weight: 300;
+  font-size: .5rem;
+  font-weight: 600;
   color: gray;
   line-height: 0.2rem;
 }
@@ -294,10 +294,14 @@ body {
     width: initial   ;
     height: 350px
   }
+    .first_banner_container img{
+      margin-bottom: -20px;
+
+  }
    
-        .banner_test_container {
-          width: 70%;
-        }
+.banner_test_container {
+ width: 70%;
+       }
 
   .second_banner_container {
     padding-left: 200px;
