--- a/src/index.css
+++ b/src/index.css
@@ -85,7 +85,7 @@ body {
 .indi_socials_container {
   display: flex;
   flex-direction: row;
-  margin-right: -1px !important;
+  margin-right: -10px !important;
   align-items: center;
   margin-bottom: 20px;
 }
@@ -141,7 +141,7 @@ body {
 
 .socials_paragraph {
   text-transform: capitalize;
-  font-size: .5rem;
+  font-size: .4rem;
   font-weight: 600;
   color: gray;
   line-height: 0.2rem;
@@ -231,7 +231,7 @@ body {
 
 .cont_browsing_img {
   height: 60px;
-  margin-left: -190px;
+  margin-left: -30px;
   width: 230px;
   text-align: center;
 
@@ -348,6 +348,13 @@ body {
   font-size: 1.2rem;
  
 
+}
+.socials_paragraph {
+  text-transform: capitalize;
+  font-size: .6rem;
+  font-weight: 600;
+  color: gray;
+  line-height: 0.2rem;
 }
 .cont_browsing_img {
   width: initial;
