--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ body {
 }
 
 .first_banner_container {
-  width:100%;
+  width:initial;
   padding-left: 20px;
   padding-right: 20px;
   background-image: url("./assets/Fugu-Banner-removebg-preview.png");
@@ -58,7 +58,7 @@ body {
   width: 100%;
 }
 .second_banner_container {
-  width: 100%;
+  width: initial;
   padding-left: 20px;
   padding-right: 20px;
   background-image: url("./assets/PFS-banner.png");
@@ -231,11 +231,15 @@ body {
 
 .cont_browsing_img {
   height: 60px;
-  margin-left: -30px;
+  margin-left: 100px;
   width: 230px;
   text-align: center;
 
 }
+/* .first_indi_social_container{
+  text-align: center;
+  margin: 0 auto !important;
+} */
 
 /* media queries */
 /* lg-992px md-768px sm-576px  */
